Fix unnecessary scrollbar when there's enough space for the dropdown

--- a/webpages/settings/style.css
+++ b/webpages/settings/style.css
@@ -71,6 +71,7 @@ h1 {
 }
 
 .addons-container {
+  flex-grow: 1;
   overflow-y: auto;
   padding: 20px;
   padding-top: 10px;
